tests/positive/pr1111a_method_syntax.safe
package pr1111a_method_syntax

   subtype small_value is integer (0 to 100)

   type counter is record
      value : small_value

   type holder is record
      inner : counter

   function (self : counter) doubled returns integer
      return self.value * 2

   function (self : counter) plus (step : small_value) returns integer
      return self.value + step

   function (self : mut counter) bump
      self.value = self.value + 1

   function total returns integer
      item : holder = (inner = (value = 20))

      item.inner.bump()
      if item.inner.doubled() == 42 and then item.inner.plus (1) == 22
         return 1
      else
         return 0
